--- a/src/components/AuthForm/AuthForm.sass
+++ b/src/components/AuthForm/AuthForm.sass
@@ -13,60 +13,12 @@
             img
                 max-width: 270px
                 height: auto
-
         &-alert
             width: 300px
-        &__input
-            position: relative
-            display: flex
-            flex-direction: column
-            input
-                width: 305px
-                height: 48px
-                margin-bottom: 20px
-                padding-left: 18px
-                font-size: 20px
-                border: 1.5px solid #d6d5d5
-                font-stretch: expanded
-                &:hover
-                    border: 1.5px solid #e5b9ff
-                    transition: 0.4s ease-in-out
-                &:active, &:focus
-                    border: 1.5px solid #c053ff
-                    transition: 0.4s ease-in-out
-                &::placeholder,
-                    color: #c3c3c3
-
-            label
-                font-weight: 500
-                color: #646363
-                font-size: 15px
-                padding-left: 19px
-                padding-bottom: 10px
-                font-stretch: expanded
-            &:first-child
-                label
-                    padding-bottom: 13px
-        &__error
-            position: absolute
-            bottom: 4px
-            right: 6px
-            font-size: 13px
-            color: #b46edd
-        &__checkbox
-            margin-left: 1px
-            display: flex
-            flex-direction: row
-            p
-                cursor: pointer
-                margin-top: 1px
-                font-weight: 500
-                font-size: 16px
-                margin-left: 12px
-                color: #646363
         &__button
             margin-top: 20px
             margin-left: 2px
+
 .ant
     &-alert
         &-message
@@ -81,7 +33,12 @@
                 justify-content: center
                 align-items: center
                 position: static
-@media screen and (max-width: 576px)
+            &__content
+                width: 290px
+
+@media screen and (max-width: 350px)
     .auth
         &-form
             margin-top: 4rem
+            &__content
+                width: 270px
