Card, Badge, ProgressBar, Header components.

--- a/src/components/Button/Button.sass
+++ b/src/components/Button/Button.sass
@@ -3,15 +3,17 @@
     align-items: center
     justify-content: center
     button
+        align-items: center
         cursor: pointer
         width: 302px
-        height: 44px
+        height: 42px
         outline: none
-        background-color: #8926c3d7
+        background-color: #b331cb
         border: 1px solid #cb86ee
+        letter-spacing: 0.5px
         color: #fafafa
         font-size: 17px
-        font-stretch: expanded
+        padding-bottom: 2px
         font-weight: 500
         -webkit-box-shadow: 11px 12px 16px -13px rgba(0,0,0,0.75)
         -moz-box-shadow: 11px 12px 16px -13px rgba(0,0,0,0.75)
@@ -26,3 +28,7 @@
             border: 1px solid #cb86ee
             transition: 0.1s
             color: #cb86ee
+    &--small
+        button
+            width: 195px
+            height: 49px
