--- a/src/components/Main/Main.sass
+++ b/src/components/Main/Main.sass
@@ -1,15 +1,20 @@
 .main
     flex-grow: 1
     &-wrapper
-        margin: 34px 50px 0 32px
+        margin: 36px 40px 0 32px
     &-topbar
         display: flex
         align-items: center
         justify-content: flex-end
-        background-color: #f9f9fa
-        height: 60px
+        background-color: #f6f6f6
+        height: 56px
+        margin-right: 20px
+        -webkit-box-shadow: 0px -1px 1px 0px rgba(0,0,0,0.75)
+        -moz-box-shadow: 0px -1px 1px 0px rgba(0,0,0,0.75)
+        box-shadow: 0px -1px 1px 0px rgba(0,0,0,0.75)
         &__account
-            margin-right: 35px
+            margin-right: 15px
+            cursor: pointer
 
     &-header
         &__title
@@ -23,7 +28,7 @@
         &__menu
             display: flex
             align-items: center
-            margin-left: 12px
+            margin-left: 7px
             margin-top: 55px
             letter-spacing: 0.5px
             font-weight: 600
@@ -37,7 +42,7 @@
                 width: 100%
                 left: -9px
                 top: 29px
-                background-color: #adb0b3
+                background-color: #dbdbdb
                 border-left: 0.5px solid #390642
 
         &__item
@@ -61,8 +66,32 @@
                     background-color: #6f48b3
                     border-left: 0.5px solid #390642
                     color: #fafafa
-.badge
-    img
-        width: 28px
-        height: 28px
-        border-radius: 50%
+
+    &-info
+        margin-top: 47px
+        display: flex
+        justify-content: space-between
+        align-items: center
+        &__control
+            margin-right: 7px
+            display: flex
+            align-items: flex-end
+            flex-direction: column
+        &__title
+            font-size: 19px
+            font-weight: 500
+            letter-spacing: 0.7px
+    &-control
+        &__sort
+            margin-right: 7px
+            display: flex
+            flex-direction: row
+            align-items: center
+            justify-content: flex-end
+            margin-top: 31px
+
+        &__selector
+            &:first-child
+                margin-right: 21px
+    &-field
+        margin-top: 15px
