--- a/src/components/NavSelect/NavSelect.sass
+++ b/src/components/NavSelect/NavSelect.sass
@@ -49,23 +49,7 @@
                 &--selected
                     &:hover
                         background-color: #8c77b3
-
-.dropdown
-    &-logo
-        position: absolute
-        right: 19px
-        top: 20px
-        width: 11px
-    &-item
-        display: block
-    &-animation
-        &-enter
-            opacity: 0
-        &-enter-active
-            opacity: 0
-            transition: opacity 200ms
-        &-exit
-            opacity: 0
-        &-exit-active
-            opacity: 0
-            transition: opacity 200ms
+@media screen and (max-width: 750px)
+    .nav
+        &-select
+            width: 80vw
