--- a/src/components/AdminPanel/AdminPanel.sass
+++ b/src/components/AdminPanel/AdminPanel.sass
@@ -1,3 +1,7 @@
 .admin-panel
     display: flex
     flex-direction: row
+@media screen and (max-width: 750px)
+    .admin-panel
+        &__sidebar
+            display: none
