--- a/src/components/Card/Card.sass
+++ b/src/components/Card/Card.sass
@@ -4,7 +4,13 @@
     -webkit-box-shadow: 1px 2px 18px -1px rgba(0,0,0,0.75)
     -moz-box-shadow: 1px 2px 18px -1px rgba(0,0,0,0.75)
     box-shadow: 1px 2px 18px -1px rgba(0,0,0,0.75)
+    &:hover
+        transition: 0.3s ease-in-out
+        -webkit-box-shadow: 13px 9px 44px -9px rgba(44,43,44,1)
+        -moz-box-shadow: 13px 9px 44px -9px rgba(44,43,44,1)
+        box-shadow: 13px 9px 44px -9px rgba(44,43,44,1)
     &-overview
+        cursor: pointer
         background-repeat: no-repeat
         background-size: cover
         height: 195px
@@ -51,6 +57,7 @@
             flex-direction: row
             justify-content: space-between
         &__title
+            cursor: pointer
             font-size: 18px
             padding-top: 33px
             margin-left: 17px
@@ -77,6 +84,7 @@
             display: flex
             align-items: center
         &__people
+            cursor: pointer
             display: flex
             flex-direction: row
             margin-left: 19px
@@ -84,5 +92,33 @@
         &__human
             margin-right: 6px
         &__progress
+            cursor: pointer
             padding-top: 2px
             margin-right: 22px
+@media screen and (max-width: 750px)
+    .card
+        width: 320px
+@media screen and (max-width: 350px)
+    .card
+        width: 289px
+        height: 403px
+        &-overview
+            &__type
+                margin-left: 0
+                font-size: 14px
+            &__status
+                margin-left: 0
+                font-size: 14px
+        &-info
+            height: 208px
+            &__title
+                padding-top: 15px
+                margin-left: 11px
+            &__docs
+                margin-left: 5px
+            &__people
+                margin-left: 17px
+            &__progress
+                margin-right: 16px
+            &__bottom
+                margin-top: 21px
