--- a/src/components/Input/Input.sass
+++ b/src/components/Input/Input.sass
@@ -33,6 +33,18 @@
         right: 6px
         font-size: 13px
         color: #b46edd
+    &--thin
+        input
+            height: 35px
+            font-size: 15px
+            margin-bottom: 19px
+        label
+            padding-bottom: 3px
+            padding-left: 4px
+            margin-bottom: 5px
+        .input
+            &-error
+                bottom: 6px
 @media screen and (max-width: 576px)
     .input
         width: 290px
@@ -40,13 +52,38 @@
             width: 290px
             height: 40px
             font-size: 15px
+            padding-left: 10px
+        &--thin
+            input
+                height: 35px
+                font-size: 15px
+                margin-bottom: 19px
+            label
+                padding-bottom: 3px
+                padding-left: 4px
+        .input
+            &-error
+                bottom: 0px
 
 @media screen and (max-width: 350px)
     .input
-        width: 270px
+        width: 255px
         input
             width: 270px
             height: 40px
             font-size: 14px
         label
             font-size: 14px
+        &--thin
+            input
+                height: 35px
+                width: 255px
+                font-size: 12px
+                margin-bottom: 19px
+            label
+                padding-bottom: 3px
+                padding-left: 4px
+            .input
+                &-error
+                    bottom: 4px
+                    right: 13px
