--- a/src/components/Sidebar/Sidebar.sass
+++ b/src/components/Sidebar/Sidebar.sass
@@ -1,9 +1,16 @@
 .sidebar
     width: 311px
-    height: 100vh
+    height: 100%
     background-color: #37186e
     &-logo
         margin-left: 16px
         margin-top: 3px
     &-content
         margin-top: 30px
+@media screen and (max-width: 750px)
+    .sidebar
+        width: 100vw
+        height: 100vh
+        display: flex
+        flex-direction: column
+        align-items: center
