--- a/src/pages/ProjectsPanel/ProjectsPanel.sass
+++ b/src/pages/ProjectsPanel/ProjectsPanel.sass
@@ -1,7 +1,7 @@
-.admin-panel
+.panel
     display: flex
     flex-direction: row
 @media screen and (max-width: 750px)
-    .admin-panel
+    .panel
         &__sidebar
             display: none
