Sidebar selected item depends by the link.

--- a/src/pages/Main/Main.sass
+++ b/src/pages/Main/Main.sass
@@ -18,99 +18,12 @@
         &__burger
             display: none
 
-    &-header
-        &__title
-            display: block
-            h1
-                color: #200a48
-                font-size: 35px
-                font-weight: 400
-                letter-spacing: 3px
-        &__menu
-            display: flex
-            align-items: center
-            margin-left: 7px
-            margin-top: 55px
-            letter-spacing: 0.5px
-            font-weight: 600
-            color: #200a48
-            position: relative
-            &::after
-                content: ""
-                position: absolute
-                transition: 0.5s ease-in-out
-                height: 2px
-                width: 100%
-                left: -9px
-                top: 29px
-                background-color: #dbdbdb
-
-        &__item
-            color: #adb0b3
-            cursor: pointer
-            &:last-child
-                margin-left: 23px
-            &--selected
-                color: #27292c
-                position: relative
-                &::after
-                    content: ""
-                    position: absolute
-                    transition: 0.5s ease-in-out
-                    height: 4px
-                    width: 168px
-                    left: -10px
-                    top: 28px
-                    z-index: 2
-                    background-color: #6f48b3
-                    border-left: 0.5px solid #390642
-                    color: #fafafa
-
-    &-field
-        &__card
-            margin: 10px
-
-    &-info
-        margin-top: 47px
-        display: flex
-        justify-content: space-between
-        align-items: center
-        &__control
-            margin-right: 7px
-            display: flex
-            align-items: flex-end
-            flex-direction: column
-        &__title
-            font-size: 19px
-            font-weight: 500
-            letter-spacing: 0.7px
-    &-control
-        &__sort
-            margin-right: 7px
-            display: flex
-            flex-direction: row
-            align-items: center
-            justify-content: flex-end
-            margin-top: 31px
-
-        &__selector
-            &:first-child
-                margin-right: 21px
-
     &-mobile
         &__sidebar
             display: none
         &__burger
             display: none
 
-    &-field
-        margin-top: 15px
-        display: flex
-        flex-wrap: wrap
-        flex-direction: row
-        justify-content: space-evenly
-        &__card
-            margin-bottom: 12px
     &--sidebar
 
         display: none
@@ -121,17 +34,17 @@
         &-topbar
             margin-right: 0
             justify-content: space-between
+            position: -webkit-sticky
+            position: sticky
+            top: 0
+            z-index: 3
             &__account
                 margin-right: 0
                 margin-left: 1.7rem
             &__burger
                 display: block
-                position: absolute
                 top: 10px
                 right: 1.7rem
-        &-field
-            &__card
-                margin: 8px 4px
 
         &-mobile
             &__sidebar
@@ -147,35 +60,8 @@
     .main
         &-wrapper
             margin-top: 9px
-        &-header
-            &__title
-                h1
-                    font-size: 28px
-            &__menu
-                margin-top: 19px
-            &__item
-                font-size: 14px
 
-        &-info
-            margin-top: 29px
-            &__title
-                font-size: 15px
-                margin-left: 5px
-        &-control
-            &__sort
-                display: none
 @media screen and (max-width: 350px)
     .main
         &-wrapper
             margin: 13px
-        &-info
-            &__title
-                font-size: 15px
-        &-header
-            &__item
-                font-size: 13px
-                &--selected
-                    &::after
-
-                        height: 3px
-                        width: 150px
