--- a/src/pages/ProjectsPanel/ProjectsPanel.sass
+++ b/src/pages/ProjectsPanel/ProjectsPanel.sass
@@ -5,3 +5,131 @@
     .panel
         &__sidebar
             display: none
+
+.projects
+    &-header
+        &__title
+            display: block
+            h1
+                color: #200a48
+                font-size: 35px
+                font-weight: 400
+                letter-spacing: 3px
+        &__menu
+            display: flex
+            align-items: center
+            margin-left: 7px
+            margin-top: 55px
+            letter-spacing: 0.5px
+            font-weight: 600
+            color: #200a48
+            position: relative
+            &::after
+                content: ""
+                position: absolute
+                transition: 0.5s ease-in-out
+                height: 2px
+                width: 100%
+                left: -9px
+                top: 29px
+                background-color: #dbdbdb
+        &__item
+            color: #adb0b3
+            cursor: pointer
+            &:last-child
+                margin-left: 23px
+            &--selected
+                color: #27292c
+                position: relative
+                &::after
+                    content: ""
+                    position: absolute
+                    transition: 0.5s ease-in-out
+                    height: 4px
+                    width: 168px
+                    left: -10px
+                    top: 28px
+                    z-index: 2
+                    background-color: #6f48b3
+                    border-left: 0.5px solid #390642
+                    color: #fafafa
+
+    &-info
+        margin-top: 47px
+        display: flex
+        justify-content: space-between
+        align-items: center
+        &__control
+            margin-right: 7px
+            display: flex
+            align-items: flex-end
+            flex-direction: column
+        &__title
+            font-size: 19px
+            font-weight: 500
+            letter-spacing: 0.7px
+
+    &-control
+        &__sort
+            margin-right: 7px
+            display: flex
+            flex-direction: row
+            align-items: center
+            justify-content: flex-end
+            margin-top: 31px
+
+        &__selector
+            &:first-child
+                margin-right: 21px
+
+    &-field
+        &__card
+            margin: 10px
+    &-field
+        margin-top: 15px
+        display: flex
+        flex-wrap: wrap
+        flex-direction: row
+        justify-content: space-evenly
+        &__card
+            margin-bottom: 12px
+
+@media screen and (max-width: 750px)
+    .projects
+        &-field
+            &__card
+                margin: 8px 4px
+
+@media screen and (max-width: 576px)
+    .projects
+        &-header
+            &__title
+                h1
+                    font-size: 28px
+            &__menu
+                margin-top: 19px
+            &__item
+                font-size: 14px
+
+        &-info
+            margin-top: 29px
+            &__title
+                font-size: 15px
+                margin-left: 5px
+
+        &-control
+            &__sort
+                display: none
+@media screen and (max-width: 350px)
+    .projects
+        &-header
+            &__item
+                font-size: 13px
+                &--selected
+                    &::after
+
+                        height: 3px
+                        width: 150px
+        &-info
+            &__title
+                font-size: 15px
