Able to add new projects.

--- a/src/pages/ProjectsPanel/ProjectsPanel.sass
+++ b/src/pages/ProjectsPanel/ProjectsPanel.sass
@@ -7,6 +7,7 @@
             display: none
 
 .projects
+
     &-header
         &__title
             display: block
@@ -83,6 +84,7 @@
                 margin-right: 21px
 
     &-field
+        height: 100vh
         &__card
             margin: 10px
     &-field
