--- a/src/pages/Main/Main.sass
+++ b/src/pages/Main/Main.sass
@@ -41,10 +41,6 @@
             &__account
                 margin-right: 0
                 margin-left: 1.7rem
-            &__burger
-                display: block
-                top: 10px
-                right: 1.7rem
 
         &-mobile
             &__sidebar
@@ -52,7 +48,8 @@
                 height: 100%
             &__burger
                 display: block
-                position: absolute
+                position: fixed
+                z-index: 1000
                 top: 20px
                 right: 1.7rem
 
